2014-02-03  Richard Henderson  <rth@twiddle.net>

	PR tree-opt/59924
	* tree-ssa-uninit.c (push_to_worklist): Don't re-push if we've
	already processed this node.
	(normalize_one_pred_1): Pass along mark_set.
	(normalize_one_pred): Create and destroy a pointer_set_t.
	(normalize_one_pred_chain): Likewise.

2014-02-03  Laurent Aflonsi  <laurent.alfonsi@st.com>

	PR gcov-profile/58602
	* gcc/gcov-io.c (gcov_open): Open with truncation when mode<0

2014-02-03  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/59831
	* ipa-cp.c (ipa_get_indirect_edge_target_1): Give up on -fno-devirtualize;
	Try to devirtualize by the knowledge of virtual table pointer given by
	aggregate propagation.
	* ipa-prop.c (try_make_edge_direct_virtual_call): Likewise.
	ipa_print_node_jump_functions): Dump also offset that
	is relevant for polymorphic calls.
	(determine_known_aggregate_parts): Add arg_type parameter; use it
	instead of determining the type from pointer type.
	(ipa_compute_jump_functions_for_edge): Update call of
	determine_known_aggregate_parts.
	* gimple-fold.c (gimple_get_virt_method_for_vtable): Break out from ...
	(gimple_get_virt_method_for_binfo): ... here; simplify using
	vtable_pointer_value_to_vtable.
	* gimple-fold.h (gimple_get_virt_method_for_vtable): Declare.
	* ipa-devirt.c (subbinfo_with_vtable_at_offset): Turn OFFSET parameter
	to unsigned HOST_WIDE_INT; Use vtable_pointer_value_to_vtable.
	(vtable_pointer_value_to_vtable): Break out from ...; handle also
	POINTER_PLUS_EXPR.
	(vtable_pointer_value_to_binfo): ... here.
	* ipa-utils.h (vtable_pointer_value_to_vtable): Declare.

2014-02-03  Teresa Johnson  <tejohnson@google.com>

	* tree-vect-slp.c (vect_supported_load_permutation_p): Avoid
	redef of outer loop index variable.

2014-02-03  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/53017
	PR c++/59211
	* doc/extend.texi (Function Attributes): Typo.

2014-02-03  Cong Hou  <congh@google.com>

	PR tree-optimization/60000