@@ -1,3 +1,7 @@
+2014-02-03  Jan Hubicka  <jh@suse.cz>
+
+	* g++.dg/ipa/devirt-25.C: New testcase.
+
 2014-02-04  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/59924
